feat(trade-ally): v1 changes

--- a/trade-ally.htm
+++ b/trade-ally.htm
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Quality Install</title>
+	<title>Trade Ally</title>
 	<style>
 		body {
 			max-width: 1200px;
@@ -46,7 +46,7 @@
 		}
 
 		.hidden {
-			display: block !important;
+			/* display: block !important; */
 		}
 	</style>
 </head>
@@ -60,7 +60,7 @@
 				<div class="bg-connections-l bg-repeat-y basis-[15%] min-w-8 bg-[length:100%]"></div>
 				<div
 					class="box-border flex-grow flex-shrink text-center px-8 py-12 grid place-content-center md:py-16 md:text-balance">
-					<h1 class="text-2xl md:text-4xl text-white my-4">Quality Install Program</h1>
+					<h1 class="text-2xl md:text-4xl text-white my-4">Trade Ally Incentive Program</h1>
 				</div>
 				<div class="bg-connections-r bg-repeat-y bg-right basis-[15%] min-w-8 bg-[length:100%]"></div>
 			</section>
@@ -68,9 +68,9 @@
 			<section class="px-8 py-16 text-center sm:grid sm:place-content-center">
 				<div class="max-w-2xl mx-auto space-y-4">
 
-					<p>Tri-State’s Quality Install (QI) training program provides in-depth training on the latest
-						technology and advancements
-						in electric heat pumps and heat pump water heaters. These systems deliver superior efficiency,
+					<p>Tri-State’s Trade Ally Incentive (TAI) Program provides in-depth training on the latest
+						technology and advancements in
+						electric heat pumps and heat pump water heaters. These systems deliver superior efficiency,
 						comfort, and performance.
 						Select the appropriate option below based on the type of installation you’re performing.
 					</p>
@@ -98,11 +98,11 @@
 			<section class="px-8 pb-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="headline-light ts-heading-2">
-						Contractors can receive up to $450 per HVAC installation as a Quality Install (QI) trade ally
-						with Tri-State
+						Receive up to $450 per HVAC installation as a trade ally contractor with Tri-State
 					</h2>
 					<p>
-						The Tri-State Quality Install Program for HVAC provides a $350 to $450 contractor spiff per
+						The Tri-State Trade Ally Incentive Program for HVAC provides a $350 to $450 contractor
+						spiff per
 						install. The program focuses on equipment selection and solutions for 5F and includes static
 						pressure and air flow testing for ducted systems. Qualifying customer systems must be a member
 						of and receive electric service from one of Tri-State G&amp;T’s participating cooperatives or
@@ -114,9 +114,8 @@
 			<section class="px-8 pb-16 text-center text-balance sm:grid sm:place-content-center hidden" data-plumber>
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="headline-light ts-heading-2">
-						Contractors can receive up to $200 per Heat Pump Water Heater installation as a Quality Install
-						(QI) trade ally with
-						Tri-State.
+						Receive up to $200 per Heat Pump Water Heater installation as a trade ally contractor with
+						Tri-State
 					</h2>
 					<p>Qualifying customer systems must be a member of and receive electric service from one of
 						Tri-State G&T’s participating
@@ -132,7 +131,7 @@
 				class="ts-content ts-background-gray ts-background-connections ts-background-connections-grey hidden"
 				data-hvac>
 				<div class="connections-content">
-					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the QI program through
+					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the TAI program through
 						one of options below</h2>
 
 					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
@@ -178,8 +177,8 @@
 								<span style="margin-top: -20%;">4</span>
 							</div>
 							<p>
-								A representative from Tri-State will contact you within 5 business days on your Quality
-								Install Program status.
+								A representative from Tri-State will contact you within 5 business days on your Trade
+								Ally Incentive Program status.
 							</p>
 						</div>
 					</div>
@@ -191,8 +190,8 @@
 				class="ts-content ts-background-gray ts-background-connections ts-background-connections-grey hidden"
 				data-plumber>
 				<div class="connections-content">
-					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the QI program through
-						one of the options below</h2>
+					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the TAI program through
+						one of options below</h2>
 
 					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
 						member
@@ -225,8 +224,8 @@
 								<span style="margin-top: -20%;">3</span>
 							</div>
 							<p>
-								A representative from Tri-State will contact you within 5 business days on your Quality
-								Install Program status.
+								A representative from Tri-State will contact you within 5 business days on your Trade
+								Ally Incentive Program status.
 							</p>
 						</div>
 					</div>
@@ -323,7 +322,8 @@
 						<div class="space-y-4">
 							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
 							<p>
-								Approved QI contractors must download and complete the form below to receive incentives.
+								Approved TAI contractors must download and complete the form below to receive
+								incentives.
 								You
 								will need to submit at least one form per install location. Email forms to participating
 								utility
@@ -362,7 +362,7 @@
 					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
 						<div class="space-y-4">
 							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
-							<p>Approved QI contractors must download and complete the form below to receive incentives.
+							<p>Approved TAI contractors must download and complete the form below to receive incentives.
 								You
 								will
 								need to submit at least one form per install location. Email forms to participating
