docs(index): update index page

--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,11 @@
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
 					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./trade-ally.htm" target="_blank"
+								class="text-slate-900 hover:underline">Trade Ally</a></dt>
+						<dd class="text-sm text-slate-500">Nov 21, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./weatherization.htm" target="_blank"
 								class="text-slate-900 hover:underline">Weatherization</a></dt>
 						<dd class="text-sm text-slate-500">November 10, 2025</dd>
@@ -92,11 +97,7 @@
 								class="text-slate-900 hover:underline">Powering the Future</a></dt>
 						<dd class="text-sm text-slate-500">May 5, 2025</dd>
 					</div>
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./quality-install.htm" target="_blank"
-								class="text-slate-900 hover:underline">Quality Install Program</a></dt>
-						<dd class="text-sm text-slate-500">Feb 26, 2025</dd>
-					</div>
+
 
 				</dl>
 			</li>
