feat(energy-mix): remove sentence from chart
per JP via Workfront task: "Change text on tristate.coop/energy-mix"

--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -259,10 +259,7 @@
 								<div>
 									Natural gas helps Tri-State maintain reliability. This type of generation operates
 									independently of weather or
-									time of day, and can be crucial during storms or extreme temperatures. We’re also
-									building next-gen
-									hydrogen-capable natural gas plants to further reduce emissions from our thermal
-									generation fleet.
+									time of day, and can be crucial during storms or extreme temperatures.
 								</div>
 							</div>
 							<div class="row-start-1 col-start-1 transition-opacity duration-300 opacity-0 pointer-events-none"
