feat(weatherization): v1 edits from Ellen

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -52,29 +52,13 @@
 							Please make sure your utility is listed among the electric utilities offering these
 							discounts and that you qualify.
 						</p>
-
-						<p>
-							When you get to the end and hit “submit,” this interest form is sent to your local
-							weatherization agency. The
-							weatherization agency will contact you to provide more details and a program application.
-							They will verify your income
-							and may request income documentation.
-							If you have questions, please contact your electric utility.
+						<p>This is a table to help you check if you qualify based on your household size.* If you make
+							less than the amount listed,
+							you qualify! *Household members are people who live with you for whom you have financial
+							responsibilities, not
+							roommates.
 						</p>
-						<p>This is a table to help you check if you qualify based on your household size.* If you
-							make less than the amount listed,
-							you qualify! Keep in mind that income thresholds are higher in some areas, so if you
-							live in a higher-income area or a
-							resort community, you may still qualify.
 
-						</p>
-						<p><small>
-
-								*Household members are people who live with you for whom you have financial
-								responsibilities, not roommates.
-							</small>
-
-						</p>
 					</div>
 
 					<div class="mx-auto space-y-4" data-income-lookup>
@@ -183,27 +167,27 @@
 		'hea': {
 			'label': 'HEA',
 			'table': {
-				1: '$57,120',
-				2: '$65,280',
-				3: '$73,440',
-				4: '$81,600',
-				5: '$90,551',
-				6: '$103,041',
-				7: '$105,383',
-				8: '$108,300',
+				1: '$107,100',
+				2: '$122,400',
+				3: '$137,700',
+				4: '$153,000',
+				5: '$165,250',
+				6: '$177,500',
+				7: '$189,750',
+				8: '$202,000',
 			},
 		},
 		'wrea': {
 			'label': 'WREA',
 			'table': {
-				1: '$57,120',
-				2: '$65,280',
-				3: '$73,440',
-				4: '$81,600',
-				5: '$90,551',
-				6: '$103,041',
-				7: '$105,383',
-				8: '$108,300',
+				1: '$107,100',
+				2: '$122,400',
+				3: '$137,700',
+				4: '$153,000',
+				5: '$165,250',
+				6: '$177,500',
+				7: '$189,750',
+				8: '$202,000',
 			},
 		},
 		'other': {
