--- a/weatherization.htm
+++ b/weatherization.htm
@@ -31,34 +31,37 @@
 			<div class="l-constrain--no-padding">
 
 
-				<section class="relative min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
+				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
 					<!-- Background Image -->
-					<img src="https://placehold.co/1600x500?text=Weatherization+Hero" alt="DESCRIBE_YOUR_IMAGE"
-						class="absolute inset-0 w-full h-full object-cover z-0" />
+					<img src="https://tristate.coop/sites/default/files/images/fpo-cozy-house-electrified.jpg"
+						alt="Cozy electrified house" class="absolute inset-0 w-full h-full object-cover z-0" />
+					<div
+						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
+						<h1 class="text-4xl md:text-5xl font-serif text-balance">
+							<!-- Replace with your heading -->
+							Upgrade your home and save money
+						</h1>
+					</div>
 				</section>
 
 				<section class="px-8 py-16  ">
 					<div class="mx-auto max-w-2xl space-y-4 text-center text-balance">
 						<h2 class="font-serif font-light text-3xl">
-							See if you qualify
+							Get Started
 						</h2>
 
 						<!-- Main content paragraphs -->
+						<p>Participating utilities are listed below, please click your utility to check eligibility
+							and get started.</p>
 						<p>
-							Thank you for your interest in energy efficiency and electrification discounts provided by
-							your rural electric cooperative.
-						</p>
-						<p>
-							Please make sure your utility is listed among the electric utilities offering these
-							discounts and that you qualify.
-						</p>
-						<p>This is a table to help you check if you qualify based on your household size.* If you make
-							less than the amount listed,
-							you qualify! *Household members are people who live with you for whom you have financial
-							responsibilities, not
-							roommates.
-						</p>
 
+							If your electric utility is not
+							listed, you can find more info with the <a
+								href="https://energyoffice.colorado.gov/weatherization-assistance-program">Colordo
+								Weatherization Assistance Program</a>
+							or with the <a href="//tristate.coop/on-bill-repayment">On-Bill Repayment</a>
+							program.
+						</p>
 					</div>
 
 					<div class="mx-auto space-y-4" data-income-lookup>
@@ -76,84 +79,95 @@
 									class="cursor-pointer inline-block rounded-full py-2 px-3 border border-solid no-underline leading-none transition-none hover:text-black"></button>
 							</template>
 							<!-- Buttons will go here -->
-						</div>
-						<table style="display: none;"
-							class="w-full hideme lg:table table-auto border border-gray-500 text-center"
-							data-table="desktop">
-							<thead>
-								<tr class="bg-white">
-									<th class="border border-gray-500 py-2 text-right">Household Size</th>
-									<th class="border border-gray-500 py-2 text-center">1</th>
-									<th class="border border-gray-500 py-2 text-center">2</th>
-									<th class="border border-gray-500 py-2 text-center">3</th>
-									<th class="border border-gray-500 py-2 text-center">4</th>
-									<th class="border border-gray-500 py-2 text-center">5</th>
-									<th class="border border-gray-500 py-2 text-center">6</th>
-									<th class="border border-gray-500 py-2 text-center">7</th>
-									<th class="border border-gray-500 py-2 text-center">8</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<th class="border border-gray-500 py-2 text-right bg-white">Income Threshold
-									</th>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-									<td class="border py-2 text-center bg-white" data-value></td>
-								</tr>
-							</tbody>
-						</table>
 
-						<table style="display: none;"
-							class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme"
-							data-table="mobile">
-							<thead>
-								<tr class="bg-gray">
-									<th class="border border-gray-500 px-4 py-2 text-center">Household Size</th>
-									<th class="border border-gray-500 px-4 py-2 text-center">Income Threshold
-									</th>
-								</tr>
-							</thead>
-							<tbody class="bg-white">
-								<tr>
-									<td class="border px-4 py-2">1 Person</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">2 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">3 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">4 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">5 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">6 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">7 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-								<tr>
-									<td class="border px-4 py-2">8 Persons</td>
-									<td class="border px-4 py-2" data-value></td>
-								</tr>
-							</tbody>
-						</table>
+
+
+						</div>
+						<div class="hideme text-center" data-income-tables>
+							<p>This is a table to help you check if you qualify based on your household size. If you
+								make less than the amount listed, you qualify!
+							</p>
+							<table class="w-full hideme lg:table table-auto border border-gray-500 text-center"
+								data-table="desktop">
+								<thead>
+									<tr class="bg-white">
+										<th class="border border-gray-500 py-2 text-right">Household Size</th>
+										<th class="border border-gray-500 py-2 text-center">1</th>
+										<th class="border border-gray-500 py-2 text-center">2</th>
+										<th class="border border-gray-500 py-2 text-center">3</th>
+										<th class="border border-gray-500 py-2 text-center">4</th>
+										<th class="border border-gray-500 py-2 text-center">5</th>
+										<th class="border border-gray-500 py-2 text-center">6</th>
+										<th class="border border-gray-500 py-2 text-center">7</th>
+										<th class="border border-gray-500 py-2 text-center">8</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<th class="border border-gray-500 py-2 text-right bg-white">Income Threshold
+										</th>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+										<td class="border py-2 text-center bg-white" data-value></td>
+									</tr>
+								</tbody>
+							</table>
+
+							<table class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme"
+								data-table="mobile">
+								<thead>
+									<tr class="bg-gray">
+										<th class="border border-gray-500 px-4 py-2 text-center">Household Size</th>
+										<th class="border border-gray-500 px-4 py-2 text-center">Income Threshold
+										</th>
+									</tr>
+								</thead>
+								<tbody class="bg-white">
+									<tr>
+										<td class="border px-4 py-2">1 Person</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">2 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">3 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">4 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">5 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">6 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">7 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+									<tr>
+										<td class="border px-4 py-2">8 Persons</td>
+										<td class="border px-4 py-2" data-value></td>
+									</tr>
+								</tbody>
+							</table>
+							<p><small>
+									*Household members are people who live with you for whom you have financial
+									responsibilities, not
+									roommates.</small>
+							</p>
+						</div>
 					</div>
 				</section>
 			</div>
