feat(weatherization): typo fix and remove testing table

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -57,7 +57,7 @@
 
 							If your electric utility is not
 							listed, you can find more info with the <a
-								href="https://energyoffice.colorado.gov/weatherization-assistance-program">Colordo
+								href="https://energyoffice.colorado.gov/weatherization-assistance-program">Colorado
 								Weatherization Assistance Program</a>
 							or with the <a href="//tristate.coop/on-bill-repayment">On-Bill Repayment</a>
 							program.
@@ -202,19 +202,6 @@
 				6: '$177,500',
 				7: '$189,750',
 				8: '$202,000',
-			},
-		},
-		'other': {
-			'label': 'Other for testing',
-			'table': {
-				1: '$5,120',
-				2: '$6,280',
-				3: '$7,440',
-				4: '$8,600',
-				5: '$9,551',
-				6: '$13,041',
-				7: '$15,383',
-				8: '$18,300',
 			},
 		}
 	}						
