feat(weatherization): hero changes

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -33,12 +33,12 @@
 
 				<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
 					<!-- Background Image -->
-					<img src="https://tristate.coop/sites/default/files/images/fpo-cozy-house-electrified.jpg"
-						alt="Cozy electrified house" class="absolute inset-0 w-full h-full object-cover z-0" />
+					<img src="https://tristate.coop/sites/default/files/images/hero-images/weatherization-door-sealing-1200x761.jpg"
+						alt="Homeowner weatherizing a door" class="absolute inset-0 w-full h-full object-cover z-0" />
+					<div class="absolute inset-0 bg-black/20"></div>
 					<div
 						class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 						<h1 class="text-4xl md:text-5xl font-serif text-balance">
-							<!-- Replace with your heading -->
 							Upgrade your home and save money
 						</h1>
 					</div>
