feat(trade-ally):  updates to the text for removing the form

--- a/trade-ally.htm
+++ b/trade-ally.htm
@@ -68,7 +68,8 @@
 			<section class="px-8 py-16 text-center sm:grid sm:place-content-center">
 				<div class="max-w-2xl mx-auto space-y-4">
 
-					<p>Tri-State’s Trade Ally Incentive (TAI) Program provides in-depth training on the latest
+					<p>Tri-State’s Trade Ally Incentive (TAI) Program provides contractor financial incentives and
+						in-depth training on the latest
 						technology and advancements in
 						electric heat pumps and heat pump water heaters. These systems deliver superior efficiency,
 						comfort, and performance.
@@ -132,7 +133,7 @@
 				data-hvac>
 				<div class="connections-content">
 					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the TAI program through
-						one of options below</h2>
+						the process below</h2>
 
 					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
 						member websites. You also agree to annual program updates and future requirements to maintain
@@ -146,9 +147,14 @@
 								<span style="margin-top: -20%;">1</span>
 							</div>
 							<p>
-								Take an approved air source heat pump course from a manufacturer or training provider
-								and email to
-								<a href="mailto:peter.rusin@tristategt.org">peter.rusin@tristategt.org</a>
+								Go to <a href="https://loveelectric.org/qualified-contractor-lists/" target="_blank">
+									https://loveelectric.org/qualified-contractor-lists/</a> to sign up
+								and follow the guidelines under
+								the "Criteria for Qualified HVAC Heat Pump Installer List" Once you review these
+								instructions and determine you meet the
+								requirements, click on the "Request to Add Your HVAC Company" button and follow the
+								instructions.
+
 							</p>
 						</div>
 						<div class="grid gap-y-4 content-start">
@@ -157,9 +163,11 @@
 								<span style="margin-top: -20%;">2</span>
 							</div>
 							<p>
-								Verify you are approved by PRPA's Efficiency Works Program or on Xcel Colorado's Heat
-								Pump Contractor list by sending a screenshot to
-								<a href="mailto:peter.rusin@tristategt.org">peter.rusin@tristategt.org</a>
+								Once you receive notification of acceptance, Tri-State staff will be notified as well.
+								You can also speed up the process
+								by emailing <a href="mailto:tradeally@tristategt.org">tradeally@tristategt.org</a> to
+								initiate your program participation.
+
 							</p>
 						</div>
 						<div class="grid gap-y-4 content-start">
@@ -168,19 +176,14 @@
 								<span style="margin-top: -20%;">3</span>
 							</div>
 							<p>
-								Watch the 4 module training videos below and answer the questionnaire on this webpage.
+								A representative of Tri-State will contact you within 3 business days after receiving
+								notification of acceptance into the
+								LoveElectric contractor list. You will receive a contractor packet via email or a phone
+								call if an email address is not
+								available.
 							</p>
 						</div>
-						<div class="grid gap-y-4 content-start">
-							<div
-								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
-								<span style="margin-top: -20%;">4</span>
-							</div>
-							<p>
-								A representative from Tri-State will contact you within 5 business days on your Trade
-								Ally Incentive Program status.
-							</p>
-						</div>
+
 					</div>
 
 
@@ -206,7 +209,12 @@
 								<span style="margin-top: -20%;">1</span>
 							</div>
 							<p>
-								Watch the Heat Pump Water Heater Installation Basics training video below.
+								Go to <a href="https://loveelectric.org/qualified-contractor-lists/" target="_blank">
+									https://loveelectric.org/qualified-contractor-lists/</a> to sign up and follow the
+								guidelines under the "Criteria for
+								Qualified HPWH Installer List." Once you review these instructions and determine you
+								meet the requirements, click on the
+								"Request to Add Your HVAC Company" button and follow the instructions.
 							</p>
 						</div>
 						<div class="grid gap-y-4 content-start">
@@ -215,7 +223,12 @@
 								<span style="margin-top: -20%;">2</span>
 							</div>
 							<p>
-								Complete the quiz below.
+								Once you receive notification of acceptance, Tri-State staff will be notified as well.
+								You can also
+								speed up the process by emailing <a
+									href="mailto:tradeally@tristategt.org">tradeally@tristategt.org</a> to initiate your
+								program
+								participation.
 							</p>
 						</div>
 						<div class="grid gap-y-4 content-start">
@@ -224,13 +237,145 @@
 								<span style="margin-top: -20%;">3</span>
 							</div>
 							<p>
-								A representative from Tri-State will contact you within 5 business days on your Trade
-								Ally Incentive Program status.
+								A representative of Tri-State will contact you within 3 business days after receiving
+								notification of acceptance into
+								the LoveElectric contractor list. You will receive a contractor packet via email or a
+								phone call if an email address is
+								not available.
 							</p>
 						</div>
 					</div>
 
 
+				</div>
+			</section>
+
+
+			<section class="hidden" data-hvac>
+				<div class="grid sm:grid-cols-2">
+					<!-- Image Column -->
+					<div
+						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
+						<img alt="Photo of equipment outdoors" class="absolute inset-0 w-full h-full object-cover"
+							src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
+						<div class="relative font-serif font-bold text-left w-full p-12">
+							Incentives for heat pumps
+						</div>
+					</div>
+
+					<!-- Content Column -->
+					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
+						<div class="space-y-4">
+							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
+							<p>
+								Approved TAI contractors must download and complete the form below to receive
+								incentives.
+								You
+								will need to submit at least one form per install location. Email forms to participating
+								utility members or send to <a
+									href="mailto:tradeally@tristategt.org">tradeally@tristategt.org</a> for processing.
+								You will receive $350 or $450 upon approval.
+								Looking
+								to save
+								your
+								customers money on their equipment? Tri-State and our members offer rebates that can be
+								combined with
+								state and federal rebates.
+							</p>
+							<p>
+								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
+									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+									target="_blank">
+									Install Incentive Form
+								</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="hidden" data-plumber>
+				<div class="grid sm:grid-cols-2">
+					<!-- Image Column -->
+					<div
+						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
+						<img alt="Photo of equipment outdoors" class="absolute w-full h-full object-cover object-top"
+							src="https://tristate.coop/sites/default/files/images/quality-install/heat_pump_water_heater_appliance_640x960.jpg" />
+						<div class="relative font-serif font-bold text-left w-full p-12">
+							Incentives for heat pump water heaters
+						</div>
+					</div>
+					<!-- Content Column -->
+					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
+						<div class="space-y-4">
+							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
+							<p>Approved TAI contractors must download and complete the form below to receive incentives.
+								You
+								will
+								need to submit at least one form per install location. Email forms to participating
+								utility members or send to <a
+									href="mailto:tradeally@tristategt.org">tradeally@tristategt.org</a> for processing.
+								You will receive $200 per Heat Pump Water Heater
+								installation. Looking to save your customers money on their equipment? Tri-State and our
+								members
+								offer rebates that can be combined with state and federal rebates.</p>
+							<p>
+								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
+									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+									target="_blank">
+									Install Incentive Form
+								</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
+				<div class="mx-auto space-y-4">
+					<h2 class="headline-light ts-heading-2">
+						Additional HVAC troubleshooting and training resources
+					</h2>
+					<div class="p-4 text-gray-700 flex flex-col items-center">
+						<div class="w-max text-left">
+							<p class="font-semibold">Sizing Tools:</p>
+							<ul class="space-y-2">
+								<li>
+									<a href="https://betterbuiltnw.com/hvac-sizing-tool" target="_blank">
+										HVAC Sizing Tool: BetterBuiltNW
+									</a>
+								</li>
+								<li>
+									<a href="https://www.coolcalc.com/" target="_blank">
+										Cool Calc: CoolCalc Manual J
+									</a>
+								</li>
+							</ul>
+
+							<p class="font-semibold mt-8">Product Information / Selection Assistance:</p>
+							<ul class="space-y-2">
+								<li>
+									<a href="https://neep.org/heating-electrification/ccashp-specification-product-list"
+										target="_blank">
+										NEEP Cold Climate Heat Pump List
+									</a>
+								</li>
+								<li>
+									<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/ASHP%20Sizing%20%26%20Selecting%20-%20NEEP%20Guide.pdf"
+										target="_blank">
+										ASHP Sizing & Selecting - NEEP Guide
+									</a>
+								</li>
+								<li>
+									<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/ASHP%20Sizing%20and%20Selection%20Guide%20(National%20Canadian%20Tool).pdf"
+										target="_blank">
+										ASHP Sizing and Selection Guide (National Canadian Tool)
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</section>
 			<section class="hidden" data-hvac><!-- Slider main container -->
@@ -301,132 +446,6 @@
 								alt="Play button" class="size-20 md:size-44"
 								src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" />
 						</a>
-					</div>
-				</div>
-			</section>
-
-			<section class="hidden" data-hvac>
-				<div class="grid sm:grid-cols-2">
-					<!-- Image Column -->
-					<div
-						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
-						<img alt="Photo of equipment outdoors" class="absolute inset-0 w-full h-full object-cover"
-							src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
-						<div class="relative font-serif font-bold text-left w-full p-12">
-							Incentives for heat pumps
-						</div>
-					</div>
-
-					<!-- Content Column -->
-					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
-						<div class="space-y-4">
-							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
-							<p>
-								Approved TAI contractors must download and complete the form below to receive
-								incentives.
-								You
-								will need to submit at least one form per install location. Email forms to participating
-								utility
-								members or the Tri-State rebate portal. You will receive $350 or $450 upon approval.
-								Looking
-								to save
-								your
-								customers money on their equipment? Tri-State and our members offer rebates that can be
-								combined with
-								state and federal rebates.
-							</p>
-							<p>
-								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
-									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
-									target="_blank">
-									Install Incentive Form
-								</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="hidden" data-plumber>
-				<div class="grid sm:grid-cols-2">
-					<!-- Image Column -->
-					<div
-						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
-						<img alt="Photo of equipment outdoors" class="absolute w-full h-full object-cover object-top"
-							src="https://tristate.coop/sites/default/files/images/quality-install/heat_pump_water_heater_appliance_640x960.jpg" />
-						<div class="relative font-serif font-bold text-left w-full p-12">
-							Incentives for heat pump water heaters
-						</div>
-					</div>
-					<!-- Content Column -->
-					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
-						<div class="space-y-4">
-							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
-							<p>Approved TAI contractors must download and complete the form below to receive incentives.
-								You
-								will
-								need to submit at least one form per install location. Email forms to participating
-								utility
-								members or the Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater
-								installation. Looking to save your customers money on their equipment? Tri-State and our
-								members
-								offer rebates that can be combined with state and federal rebates.</p>
-							<p>
-								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
-									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
-									target="_blank">
-									Install Incentive Form
-								</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-
-			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
-				<div class="mx-auto space-y-4">
-					<h2 class="headline-light ts-heading-2">
-						Additional HVAC troubleshooting and training resources
-					</h2>
-					<div class="p-4 text-gray-700 flex flex-col items-center">
-						<div class="w-max text-left">
-							<p class="font-semibold">Sizing Tools:</p>
-							<ul class="space-y-2">
-								<li>
-									<a href="https://betterbuiltnw.com/hvac-sizing-tool" target="_blank">
-										HVAC Sizing Tool: BetterBuiltNW
-									</a>
-								</li>
-								<li>
-									<a href="https://www.coolcalc.com/" target="_blank">
-										Cool Calc: CoolCalc Manual J
-									</a>
-								</li>
-							</ul>
-
-							<p class="font-semibold mt-8">Product Information / Selection Assistance:</p>
-							<ul class="space-y-2">
-								<li>
-									<a href="https://neep.org/heating-electrification/ccashp-specification-product-list"
-										target="_blank">
-										NEEP Cold Climate Heat Pump List
-									</a>
-								</li>
-								<li>
-									<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/ASHP%20Sizing%20%26%20Selecting%20-%20NEEP%20Guide.pdf"
-										target="_blank">
-										ASHP Sizing & Selecting - NEEP Guide
-									</a>
-								</li>
-								<li>
-									<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/ASHP%20Sizing%20and%20Selection%20Guide%20(National%20Canadian%20Tool).pdf"
-										target="_blank">
-										ASHP Sizing and Selection Guide (National Canadian Tool)
-									</a>
-								</li>
-							</ul>
-						</div>
 					</div>
 				</div>
 			</section>
