fix(trade-ally): link color

--- a/trade-ally.htm
+++ b/trade-ally.htm
@@ -272,8 +272,8 @@
 								incentives.
 								You
 								will need to submit at least one form per install location. Email forms to participating
-								utility members or send to <a
-									href="mailto:tradeally@tristategt.org">tradeally@tristategt.org</a> for processing.
+								utility members or send to <a href="mailto:tradeally@tristategt.org"
+									class="text-white">tradeally@tristategt.org</a> for processing.
 								You will receive $350 or $450 upon approval.
 								Looking
 								to save
@@ -313,8 +313,8 @@
 								You
 								will
 								need to submit at least one form per install location. Email forms to participating
-								utility members or send to <a
-									href="mailto:tradeally@tristategt.org">tradeally@tristategt.org</a> for processing.
+								utility members or send to <a href="mailto:tradeally@tristategt.org"
+									class="text-white">tradeally@tristategt.org</a> for processing.
 								You will receive $200 per Heat Pump Water Heater
 								installation. Looking to save your customers money on their equipment? Tri-State and our
 								members
