fix(trade-ally): missed text change

--- a/trade-ally.htm
+++ b/trade-ally.htm
@@ -194,7 +194,7 @@
 				data-plumber>
 				<div class="connections-content">
 					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the TAI program through
-						one of options below</h2>
+						the process below</h2>
 
 					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
 						member
