feat(trade-ally): new section, pdf and index update

--- a/index.htm
+++ b/index.htm
@@ -40,15 +40,17 @@
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
 					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./trade-ally.htm" target="_blank"
+								class="text-slate-900 hover:underline">Trade
+								Ally</a></dt>
+						<dd class="text-sm text-slate-500">Jan 15, 2026</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./our-energy-mix.htm" target="_blank"
 								class="text-slate-900 hover:underline">Energy Mix</a></dt>
 						<dd class="text-sm text-slate-500">Nov 21, 2025</dd>
 					</div>
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./trade-ally.htm" target="_blank"
-								class="text-slate-900 hover:underline">Trade Ally</a></dt>
-						<dd class="text-sm text-slate-500">Nov 21, 2025</dd>
-					</div>
+
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./weatherization.htm" target="_blank"
 								class="text-slate-900 hover:underline">Weatherization</a></dt>
