--- a/trade-ally.htm
+++ b/trade-ally.htm
@@ -321,7 +321,7 @@
 								offer rebates that can be combined with state and federal rebates.</p>
 							<p>
 								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
-									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+									href="https://tristate.coop/sites/default/files/PDF/TAIP%20Rebate%20Form.pdf"
 									target="_blank">
 									Install Incentive Form
 								</a>
@@ -330,7 +330,24 @@
 					</div>
 				</div>
 			</section>
+			<section
+				class="ts-content ts-background-gray ts-background-connections ts-background-connections-grey hidden"
+				data-hvac="" data-plumber="">
+				<div class="connections-content">
+					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Save customers money with rebates
+						and
+						financing</h2>
 
+					<p>Looking to save your customers money on their equipment? Tri-State and our members offer rebates
+						that can be
+						combined with state and federal rebates. Or, sign up to offer your customers affordable
+						financing options
+						with no money down or credit check through our On-Bill Repayment program.</p>
+
+					<p class="button-row" style="margin: 2vh auto;"><a class="button button-transparent"
+							href="/on-bill-repayment">Learn about On-Bill Repayment</a></p>
+				</div>
+			</section>
 
 			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
 				<div class="mx-auto space-y-4">
