--- a/trade-ally.htm
+++ b/trade-ally.htm
@@ -284,7 +284,7 @@
 							</p>
 							<p>
 								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
-									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+									href="https://tristate.coop/sites/default/files/PDF/TAIP%20Rebate%20Form.pdf"
 									target="_blank">
 									Install Incentive Form
 								</a>
