feat(weatherization): change to long member names

--- a/weatherization.htm
+++ b/weatherization.htm
@@ -179,7 +179,7 @@
 <script>
 	const incomeLookupData = {
 		'hea': {
-			'label': 'HEA',
+			'label': 'Highline Electric',
 			'table': {
 				1: '$107,100',
 				2: '$122,400',
@@ -192,7 +192,7 @@
 			},
 		},
 		'wrea': {
-			'label': 'WREA',
+			'label': 'White River Electric',
 			'table': {
 				1: '$107,100',
 				2: '$122,400',
