--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,11 @@
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
 					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./beneficial-electrification-home.htm" target="_blank"
+								class="text-slate-900 hover:underline">BE Home</a></dt>
+						<dd class="text-sm text-slate-500">Feb 16, 2026</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./trade-ally.htm" target="_blank"
 								class="text-slate-900 hover:underline">Trade
 								Ally</a></dt>
